--- a/src/components/Proyects.css
+++ b/src/components/Proyects.css
@@ -109,28 +109,28 @@
 }
 
 .img-proyect-1 {
-  background: url("../../public/images/Gymate.png");
+  background: url("../../public/images/apipedidos.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .img-proyect-2 {
-  background: url("../../public/images/NicaVideo.png");
+  background: url("../../public/images/onlineshop.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .img-proyect-3 {
-  background: url("../../public/images/Songy.png");
+  background: url("../../public/images/biblio.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: left;
 }
 
 .img-proyect-4 {
-  background: url("../../public/images/NoteCloud.png");
+  background: url("../../public/images/customer.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position-y: top;
